# serde-lua-table

./: .gitignore  Cargo.toml  README.md  test_example.lua  xd.lua
src/: lib.rs  main.rs  ser.rs
src/format/: character_escape.rs  compact.rs  mod.rs  pretty.rs
src/ser/: compound.rs  error.rs  map_key_serializer.rs  mod.rs
