[package]
name = "xdlua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.7.4", features = ["lua54", "vendored"] }
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0"

ryu = "1"
itoa = "1"