[package]
name = "serde-lua-table"
version = "0.1.1"
edition = "2021"
authors = ["Nerixyz <nerixdev@outlook.de>"]
repository = "https://github.com/Nerixyz/serde-lua-table.git"
description = "Serialize values to a lua representation."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lua", "serde", "serialization"]
categories = ["encoding"]

[lib]
name = "serde_lua_table"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
thiserror = "1.0"
ryu = "1"
itoa = "1"

[dev-dependencies]
mlua = { version = "0.7.4", features = ["lua54", "vendored", "serialize"] }